--- a/lab 1/3.html
+++ b/lab 1/3.html
@@ -2,7 +2,9 @@
     <head>
         <script>
             function Render() {
-                var inputData=mainform.txtInput.value;
+                var inputData //Declaration
+                inputData=mainform.txtInput.value; //Initialization or Assignment
+                //var inputData=mainform.txtInput.value; //declaration +assignment 
                 alert(inputData);
             }
         </script>
